# Breakout_OpenGL

./: CMakeLists.txt  README.md
include/glad/: glad.h
res/shaders/: particle.frag  particle.vert  shader.frag  shader.vert
src/: CMakeLists.txt  common.h  game.cpp  game.h  game_level.cpp  game_level.h  game_object.cpp  game_object.h  glad.cpp  main.cpp  particle_gen.cpp  particle_gen.h  render.cpp  render.h  res_mgr.cpp  res_mgr.h  shader.cpp  shader.h  texture.cpp  texture.h
